# AiSysAdmin

./: .env.example  .gitignore  README.md  pyproject.toml  servers.yaml.example
docs/: AI-SysAdmin-Overview.md
docs/superpowers/plans/: 2026-03-31-sysadmin-milestone1.md  2026-03-31-sysadmin-milestone2.md  2026-03-31-sysadmin-milestone3.md  2026-03-31-sysadmin-milestone4.md  2026-03-31-sysadmin-milestone5.md  2026-03-31-sysadmin-milestone6.md  2026-04-01-full-security-audit.md
docs/superpowers/specs/: 2026-03-31-sysadmin-agent-design.md  2026-04-01-full-security-audit-design.md
src/agensysadmin/: __main__.py  config.py  server.py  ssh_manager.py
src/agensysadmin/tools/: backup.py  docker.py  general.py  management.py  monitoring.py  reports.py  security.py
tests/: test_config.py  test_server_integration.py  test_ssh_manager.py  test_tools_backup.py  test_tools_docker.py  test_tools_general.py  test_tools_management.py  test_tools_monitoring.py  test_tools_reports.py  test_tools_security.py
