[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agensysadmin"
version = "0.1.0"
description = "MCP server for remote Linux server administration via SSH"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.20",
    "paramiko>=3.4",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agensysadmin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
